--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -4,37 +4,44 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_weight="2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/logo_loginFragment_ImageView"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="583dp"
+        android:layout_weight="3" />
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="112dp"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:gravity="center">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/signIn_loginFragment_textView"
-            android:text="TEST1"/>
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:paddingEnd="100dp"
+            android:text="@string/signInView_loginFragment" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/signUp_loginFragment_textView"
-            android:text="TEST2"/>
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingStart="100dp"
+            android:paddingTop="10dp"
+            android:gravity="center"
+            android:text="@string/signUpView_loginFragment"
+            />
 
     </LinearLayout>
 
     <FrameLayout
-        android:layout_weight="2"
+        android:id="@+id/fragmentContainer_loginFragment_FrameLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/fragmentContainer_loginFragment_FrameLayout">
+        android:layout_height="365dp"
+        android:layout_weight="1">
 
 
     </FrameLayout>
