--- a/app/src/main/res/layout/signin_fragment.xml
+++ b/app/src/main/res/layout/signin_fragment.xml
@@ -6,7 +6,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="40dp">
 
 
         <LinearLayout
@@ -14,15 +15,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/handle_signIn_imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
             <EditText
-                android:id="@+id/handle_signIn_editText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:id="@+id/handle_signInFragment_editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="\@Handle"/>
 
         </LinearLayout>
 
@@ -31,28 +28,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/password_signIn_imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
             <EditText
-                android:id="@+id/password_signIn_editText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:id="@+id/password_signInFragment_editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Password"/>
 
         </LinearLayout>
 
         <Button
-            android:id="@+id/signIn_button"
+            android:id="@+id/signInFragment_button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/signupLink_signIn_textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
+            android:layout_height="wrap_content"
+            android:text="@string/signIn_buttonView_signInFragment"/>
 
     </LinearLayout>
 
