--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -6,36 +6,44 @@
     <ImageView
         android:id="@+id/logo_loginFragment_ImageView"
         android:layout_width="match_parent"
-        android:layout_height="583dp"
+        android:layout_height="347dp"
         android:layout_weight="3" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="112dp"
+        android:layout_height="142dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/signIn_loginFragment_textView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center"
-            android:paddingTop="10dp"
-            android:paddingEnd="100dp"
-            android:text="@string/signInView_loginFragment" />
+            android:paddingTop="0dp"
+            android:paddingEnd="0dp"
+            android:text="@string/signInView_loginFragment"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/signUp_loginFragment_textView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:paddingStart="100dp"
-            android:paddingTop="10dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
             android:gravity="center"
+            android:paddingStart="0dp"
+            android:paddingTop="0dp"
             android:text="@string/signUpView_loginFragment"
-            />
+            android:textSize="24sp" />
 
     </LinearLayout>
+
+    <View android:background="#1da1f2"
+        android:layout_width = "match_parent"
+        android:layout_height="1dp"/>
 
     <FrameLayout
         android:id="@+id/fragmentContainer_loginFragment_FrameLayout"
