--- a/app/src/main/res/layout/signup_info_activity.xml
+++ b/app/src/main/res/layout/signup_info_activity.xml
@@ -6,46 +6,55 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:orientation="vertical">
 
 
-        <ImageView
-            android:id="@+id/profilePicture_signUpInfoActivity_imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true" />
+            <ImageView
+                android:id="@+id/profilePicture_signUpInfoActivity_imageView"
+                android:layout_width="match_parent"
+                android:layout_height="186dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"/>
 
-        <TextView
-            android:id="@+id/editPhoto_signUpInfoActivity_EditText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/editPhotoView_signUpInfoActivity"/>
+            <TextView
+                android:id="@+id/editPhoto_signUpInfoActivity_EditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingBottom="10dp"
+                android:text="@string/editPhotoView_signUpInfoActivity"
+                android:textSize="18sp" />
 
-        <EditText
-            android:id="@+id/firstName_signUpInfoActivity_editText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/firstName_signUpInfoActivity_editText"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content" />
 
-        <EditText
-            android:id="@+id/lastName_signUpInfoActivity_editText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/lastName_signUpInfoActivity_editText"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content" />
 
-        <EditText
-            android:id="@+id/handle_signUpInfoActivity_editText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/handle_signUpInfoActivity_editText"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content" />
 
 
-        <Button
-            android:id="@+id/continue_signUpInfoActivity_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/continueButton_signUpInfoActivity"/>
+            <Button
+                android:id="@+id/continue_signUpInfoActivity_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/continueButton_signUpInfoActivity" />
         </LinearLayout>
 
     </ScrollView>
