--- a/app/src/main/res/layout/signin_fragment.xml
+++ b/app/src/main/res/layout/signin_fragment.xml
@@ -17,9 +17,11 @@
 
             <EditText
                 android:id="@+id/handle_signInFragment_editText"
+                android:text="\@franchare"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="\@Handle"/>
+                android:hint="\@Handle"
+                />
 
         </LinearLayout>
 
@@ -32,7 +34,8 @@
                 android:id="@+id/password_signInFragment_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Password"/>
+                android:text="cs340switter"
+                android:hint="Password"/>
 
         </LinearLayout>
 
@@ -41,6 +44,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/signIn_buttonView_signInFragment"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/resetPassword_textView_signInFragment"
+            android:id="@+id/resetPassword_textView_signInFragment"/>
 
     </LinearLayout>
 
